--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>another-jquery-pagination-plugin demo</title>
     <script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
     <script src="jquery.pagination.js"></script>
-    <script src="style.css"></script>
+    <link rel="stylesheet" href="style.css">
     <script>
         $( document ).ready(function() {
             $('#short-list').find('ul').paginate({
@@ -15,35 +15,36 @@
 <body>
     <div class="content" id="short-list">
         <ul>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-            <li>Vestibulum auctor dapibus neque.</li>
-            <li>Nunc dignissim risus id metus.</li>
-            <li>Cras ornare tristique elit.</li>
-            <li>Vivamus vestibulum nulla nec ante.</li>
-            <li>Praesent placerat risus quis eros.</li>
-            <li>Fusce pellentesque suscipit nibh.</li>
-            <li>Integer vitae libero ac risus egestas placerat.</li>
-            <li>Vestibulum commodo felis quis tortor.</li>
-            <li>Ut aliquam sollicitudin leo.</li>
-            <li>Cras iaculis ultricies nulla.</li>
-            <li>Donec quis dui at dolor tempor interdum.</li>
-            <li>Vivamus molestie gravida turpis.</li>
-            <li>Fusce lobortis lorem at ipsum semper sagittis.</li>
-            <li>Nam convallis pellentesque nisl.</li>
-            <li>Integer malesuada commodo nulla.</li>
-            <li>Vivamus vestibulum nulla nec ante.</li>
-            <li>Praesent placerat risus quis eros.</li>
-            <li>Fusce pellentesque suscipit nibh.</li>
-            <li>Integer vitae libero ac risus egestas placerat.</li>
-            <li>Vestibulum commodo felis quis tortor.</li>
-            <li>Ut aliquam sollicitudin leo.</li>
-            <li>Cras iaculis ultricies nulla.</li>
-            <li>Donec quis dui at dolor tempor interdum.</li>
-            <li>Vivamus molestie gravida turpis.</li>
-            <li>Fusce lobortis lorem at ipsum semper sagittis.</li>
-            <li>Nam convallis pellentesque nisl.</li>
-            <li>Integer malesuada commodo nulla.</li>
+            <li>1. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+            <li>2. Aliquam tincidunt mauris eu risus.</li>
+            <li>3. Vestibulum auctor dapibus neque.</li>
+            <li>4. Nunc dignissim risus id metus.</li>
+            <li>5. Cras ornare tristique elit.</li>
+            <li>6. Vivamus vestibulum nulla nec ante.</li>
+            <li>7. Praesent placerat risus quis eros.</li>
+            <li>8. Fusce pellentesque suscipit nibh.</li>
+            <li>9. Integer vitae libero ac risus egestas placerat.</li>
+            <li>10. Vestibulum commodo felis quis tortor.</li>
+            <li>11. Ut aliquam sollicitudin leo.</li>
+            <li>12. Cras iaculis ultricies nulla.</li>
+            <li>13. Donec quis dui at dolor tempor interdum.</li>
+            <li>14. Vivamus molestie gravida turpis.</li>
+            <li>15. Fusce lobortis lorem at ipsum semper sagittis.</li>
+            <li>16. Nam convallis pellentesque nisl.</li>
+            <li>17. Integer malesuada commodo nulla.</li>
+            <li>18. Vivamus vestibulum nulla nec ante.</li>
+            <li>19. Praesent placerat risus quis eros.</li>
+            <li>20. Fusce pellentesque suscipit nibh.</li>
+            <li>21. Integer vitae libero ac risus egestas placerat.</li>
+            <li>22. Vestibulum commodo felis quis tortor.</li>
+            <li>23. Ut aliquam sollicitudin leo.</li>
+            <li>24. Cras iaculis ultricies nulla.</li>
+            <li>25. Donec quis dui at dolor tempor interdum.</li>
+            <li>26. Vivamus molestie gravida turpis.</li>
+            <li>27. Fusce lobortis lorem at ipsum semper sagittis.</li>
+            <li>28. Nam convallis pellentesque nisl.</li>
+            <li>29. Integer malesuada commodo nulla.</li>
+            <li>30. Vestibulum commodo felis quis tortor.</li>
         </ul>
     </div>
 </body>
